# rustdress

./: .env.example  .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  default.nix  devenv.nix  flake.nix  index.js  rustdress.nix  sample-docker-compose.yaml  sample_rustdress.toml
.github/workflows/: build.yml  devenv.yml  nix.yml  push_docker.yml  release.yml
src/: config.rs  main.rs
src/credentials/: get_cert.rs  get_lnd.rs  get_macaroon.rs  get_socket.rs  mod.rs
src/server/: constants.rs  handle_request.rs  mod.rs  parsing_functions.rs  publish_to_relay.rs  some.rs  start_server.rs  utils.rs
