[package]
name = "rustdress"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bech32 = "0.9.1"
chrono = "0.4.23"
dotenv = "0.15.0"
hex = "0.4.3"
hyper = "0.14.24"
lnd_grpc_rust = "2.0.0"
ring = "0.16.20"
secp256k1 = "0.26.0"
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.93"
sha2 = "0.10.6"
tokio = "1.25.0"
urlencoding = "2.1.2"
tungstenite = "0.18"
tokio-tungstenite = { version = "0.18.0", features = ["native-tls"] }
futures-util = "0.3.26"
