[package]
name = "rustdress"
version = "0.4.11"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bech32 = "0.9.1"
chrono = "0.4.31"
dotenv = "0.15.0"
hex = "0.4.3"
hyper = "0.14.27"
lnd_grpc_rust = "2.3.0"
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.107"
sha2 = "0.10.8"
tokio = "1.32.0"
urlencoding = "2.1.3"
tungstenite = "0.20.1"
tokio-tungstenite = { version = "0.20.1", features = ["native-tls"] }
futures-util = "0.3.28"
futures = "0.3.28"
rusted-nostr-tools = "0.1.3"

[profile.release]
lto = true
codegen-units = 1
